src/Components/Header.css
#header {
  background-color: #00000067;
  position: fixed;
  top: 0;
  z-index: 1;
  width: 100%;
}

.nav__container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1em 0;
}

.logo {
  text-transform: capitalize;
  font-weight: 900;
  font-size: 1.8rem;
  z-index: 999;
  font-weight: 300;
}

.logo__link {
  text-decoration: none;
  color: #fff;
}

.nav__list {
  list-style: none;

  gap: 0.8em;
  display: none;
}

.nav__list-mobile {
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: 0.8em;
}

.nav__mobile-close {
  background-color: #000000da;
  color: hsl(0, 0%, 100%);
  width: 100%;
  height: 400px;
  display: flex;
  justify-content: center;
  position: fixed;
  right: 0;
  top: -100%;
  transition: 350ms;
  backdrop-filter: blur(5px);
}

.nav__mobile-close.active {
  top: 0;
  transition: 350ms;
  z-index: 1;
}

.menu__open {
  cursor: pointer;
}

.menu__close {
  position: absolute;
  right: 35px;
  top: 18px;
  cursor: pointer;
  z-index: 5;
  /* color: #fff; */
}

.nav__list-mobile {
  position: absolute;
  right: 10px;
  top: 70px;
  width: 90%;
  display: flex;
  align-items: center;
}

.nav__item {
  padding: 0.6em 1em;
  font-size: 1rem;
  text-transform: capitalize;
  font-weight: 700;
  color: #fff;
}

.nav__item-desk:hover,
.nav__item-mobile:hover {
  border-bottom: 1px solid #b3e0b7fa;
  cursor: pointer;
}

.nav__item-desk {
  font-size: 1.3rem;
  padding: 0.2em;
  cursor: pointer;
  color: #fff;
  text-decoration: none;
  font-weight: 300;
}

.nav__item-mobile {
  cursor: pointer;
  color: #fff;
  padding: 0.2em;
  text-decoration: none;
}

@media (min-width: 800px) {
  .menu__open,
  .menu__close,
  .nav__mobile-close {
    display: none;
  }

  .nav__list {
    list-style: none;

    gap: 0.8em;
    display: flex;
  }

  .nav__item {
    font-size: 1rem;
    text-transform: capitalize;
    color: #fff;
  }
}

